# agent-smith

./: .coverage  .env.example  .gitignore  AGENTS.md  CLAUDE.md  GAP-ANALYSIS.md  LICENSE  QA_AGENT_PLAN.md  README.md  cost_tracker.py  coverage.xml  dashboard.html  generate_pdf_report.py  logger.py  mcp_server.py  opencode.md  pentest_metrics.jsonl  pyproject.toml  report_generator.py  scan_session.py  sonar-project.properties  steering_queue.json
.claude/: settings.json
.claude/hooks/: post-compact.sh
.codex/: hooks.json
.codex/hooks/: post-compact.sh
benchmarks/: README.md  runner.py
commands/: pentester.md
core/: api_server.py  capabilities.py  client_patterns.py  cost.py  coverage.py  dashboard_auth.py  findings.py  findings_validate.py  gate_keywords.py  host_lane.py  integrity.py  logger.py  mermaid-config.json  metrics.py  model_detect.py  oob.py  paths.py  probe_runner.py  probe_verbs.py  prompt_fence.py  qa_agent.py  quick_log.py  session.py  skill_paths.py  status_reporter.py  steering.py  store.py  target_class.py  taxonomy.py  wishlist.py
dashboard/: finding.html  index.html
docs/: architecture.md  dashboard-api.md  dashboard-redesign-plan.md  extending.md  installation.md  kali-toolchain.md  operating.md  phase1-detector-trust.md  production-isolation.md  skills.md  testing.md  tools.md  training-data.md
installers/: change-mcp-port.sh  com.agent-smith.mcp-sse.plist  install-launchd.sh  install.ps1  install.sh  install_codex.ps1  install_codex.sh  install_opencode.ps1  install_opencode.sh  run-mcp-server.sh  start-mcp-server.ps1  start-mcp-server.sh  uninstall.sh  uninstall_codex.sh
mcp_server/: __main__.py  _app.py  ai_red_team.py  code_analysis.py  exploitation.py  http_tools.py  infra.py  kali_tools.py  network.py  report_tools.py  reporting.py  scan.py  scan_tools.py  session_tools.py  web.py
skills/: pentester.md
templates/: dashboard.html
tests/: conftest.py  test_adjunction.py  test_ai_redteam_coverage.py  test_anti_fp.py  test_api_server.py  test_api_smith_endpoints.py  test_budget_truncation_hint.py  test_client_compat.py  test_client_patterns.py  test_clip.py  test_compositional_chaining.py  test_container_teardown.py  test_cost.py  test_coverage.py  test_coverage_param_registration.py  test_dashboard_auth.py  test_discord_notifier.py  test_discovery.py  test_docker_cli.py  test_docker_runner.py  test_dotenv.py  test_env_key_separation.py  test_envelope.py  test_envelope_new_helpers.py  test_exec_sandbox.py  test_ffuf_discovery.py  test_finding_dedup_trace.py  test_finding_detail_routes.py  test_findings.py  test_findings_validate.py  test_gap_phase0.py  test_gap_phase1.py  test_gap_phase1b.py  test_gap_phase1c.py  test_graph.py  test_graph_paths.py  test_harvest_decisions.py  test_kali_observability.py  test_kali_runner.py  test_kali_tool.py  (+44 more)
threat-model/: threat-model-juice-shop.html  threat-model-juice-shop.md
tools/: __init__.py  base.py  docker_cli.py  docker_runner.py  ffuf.py  fuzzyai.py  httpx.py  kali_runner.py  metasploit_runner.py  mobsf_runner.py  mobsfscan.py  naabu.py  nmap.py  nuclei.py  sandbox_runner.py  semgrep.py  subfinder.py  trufflehog.py
training-data/: README.md  build_derived.py  training-data-plan.md  validate.py
(+197 files in other folders)
