[tool.poetry]
name = "pentest-agent"
version = "0.2.0"
description = "Claude-orchestrated lightweight penetration testing agent"
authors = []
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
aiohttp = ">=3.9.0"
mcp = ">=1.0.0"
fastapi = {extras = ["standard"], version = ">=0.100.0"}
sentry-sdk = {version = "^2.54.0", optional = true}

[tool.poetry.extras]
monitoring = ["sentry-sdk"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
