[tool.poetry]
name = "pentest-agent"
version = "0.2.0"
description = "Claude-orchestrated lightweight penetration testing agent"
authors = []
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
aiohttp = ">=3.14.0"
mcp = "==1.26.0"
fastapi = {extras = ["standard"], version = "==0.135.1"}
starlette = ">=1.0.0"
pyjwt = {version = ">=2.12.0", extras = ["crypto"]}
idna = ">=3.12"
sentry-sdk = {version = "==2.54.0", optional = true}
langgraph = ">=0.2"
langchain-core = ">=0.2"
langchain-openai = ">=0.1"
langchain-anthropic = {version = ">=0.1", optional = true}
langchain-ollama = {version = ">=0.1", optional = true}
psutil = ">=5.9"

[tool.poetry.extras]
monitoring = ["sentry-sdk"]
qa-openai    = ["langchain-openai"]
qa-anthropic = ["langchain-anthropic"]
qa-ollama    = ["langchain-ollama"]

[tool.poetry.group.dev.dependencies]
pytest = "==9.0.3"
pytest-asyncio = "==1.3.0"
pytest-cov = "==7.0.0"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source = ["."]
include = ["core/*", "tools/*", "mcp_server/*"]
omit = ["tools/kali/*", "tools/metasploit/*"]
relative_files = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
